--- a/StudentAttendance/nbproject/private/private.properties
+++ b/StudentAttendance/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/sudo_dotdev/.netbeans/19/build.properties
+user.properties.file=C:\\Users\\user\\AppData\\Roaming\\NetBeans\\20\\build.properties
